Stream upd